--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera preset='hiro'></a-marker-camera>
-		<!--<a-marker-camera type='pattern' patternUrl='index-marker.patt'></a-marker-camera>-->
+		<a-sphere position='0 0.5 0' material='opacity: 0.5;'></a-sphere>
+		<!--<a-marker-camera preset='hiro'></a-marker-camera>-->
+		<a-marker-camera type='pattern' url='index-marker.patt'></a-marker-camera>-->
 	</a-scene>
 </body>
