Image marker test

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-sphere position='0 0.5 0' material='opacity: 0.5;'></a-sphere>
 		<!--<a-marker-camera preset='hiro'></a-marker-camera>-->
-		<a-marker-camera type='pattern' url='index-marker.patt'></a-marker-camera>-->
+		<a-marker-camera type='pattern' url='hoover-marker.patt'></a-marker-camera>-->
 	</a-scene>
 </body>
