--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 	<p>With your copy, scan the QR codes with your phone to view the colorized photographs.</p>
 	<br>
 	<ul>
-		<li><a href="ar.html"></a>Direct link to AR on mobile.</li>
+		<li><a href="ar.html">Direct link to AR on mobile.</a></li>
 	</ul>
 </body>
