--- a/ar.html
+++ b/ar.html
@@ -9,9 +9,29 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-sphere position='0 0.5 0' material='opacity: 0.5;'></a-sphere>
-		<!--<a-marker-camera preset='hiro'></a-marker-camera>-->
-		<a-marker-camera type='pattern' url='hoover-marker.patt'></a-marker-camera>-->
+	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+		<a-marker type='pattern' url='marker1.patt'>
+			<a-plane position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-plane>
+		</a-marker>
+
+		<a-marker type='pattern' url='marker2.patt'>
+			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere>
+		</a-marker>
+
+		<a-marker type='pattern' url='marker3.patt'>
+			<a-box position='0 0.5 0' material='opacity: 0.5; color:red'></a-box>
+		</a-marker>
+
+		<a-marker type='pattern' url='marker4.patt'>
+			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere>
+		</a-marker>
+
+		<a-marker type='pattern' url='marker5.patt'>
+			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere>
+		</a-marker>
+
+		<a-marker type='pattern' url='marker6.patt'>
+			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere>
+		</a-marker>
 	</a-scene>
 </body>
