--- a/ar.html
+++ b/ar.html
@@ -33,5 +33,7 @@
 		<a-marker type='pattern' url='marker6.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere>
 		</a-marker>
+
+		<a-entity camera></a-entity>
 	</a-scene>
 </body>
