--- a/ar.html
+++ b/ar.html
@@ -9,12 +9,12 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs='sourceType: webcam;'>
+	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 		<a-marker type='pattern' url='marker1.patt'>
-			<a-plane position='0 0.5 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
+			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
 		</a-marker>
 
-		<a-marker preset='kanji'>
+		<a-marker type='pattern' url='marker2.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere>
 		</a-marker>
 
