--- a/ar.html
+++ b/ar.html
@@ -10,27 +10,27 @@
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-		<a-marker type='pattern' url='marker2.patt'>
+		<a-marker preset='custom' type='pattern' url='marker2.patt'>
 			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
 		</a-marker>
 
-		<a-marker type='pattern' url='marker1.patt'>
+		<a-marker preset='custom' type='pattern' url='marker1.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere>
 		</a-marker>
 
-		<a-marker type='pattern' url='marker3.patt'>
+		<a-marker preset='custom' type='pattern' url='marker3.patt'>
 			<a-box position='0 0.5 0' material='opacity: 0.5; color:red'></a-box>
 		</a-marker>
 
-		<a-marker type='pattern' url='marker4.patt'>
+		<a-marker preset='custom' type='pattern' url='marker4.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere>
 		</a-marker>
 
-		<a-marker type='pattern' url='marker5.patt'>
+		<a-marker preset='custom' type='pattern' url='marker5.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere>
 		</a-marker>
 
-		<a-marker type='pattern' url='marker6.patt'>
+		<a-marker preset='custom' type='pattern' url='marker6.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere>
 		</a-marker>
 		<a-entity camera></a-entity>
