--- a/ar.html
+++ b/ar.html
@@ -14,7 +14,7 @@
 			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
 		</a-marker>
 
-		<a-marker preset='custom' type='pattern' url='marker1.patt'>
+		<!-- <a-marker preset='custom' type='pattern' url='marker1.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere>
 		</a-marker>
 
@@ -32,7 +32,7 @@
 
 		<a-marker preset='custom' type='pattern' url='marker6.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere>
-		</a-marker>
+		</a-marker> -->
 		<a-entity camera></a-entity>
 	</a-scene>
 </body>
