--- a/ar.html
+++ b/ar.html
@@ -10,7 +10,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-		<a-marker preset='custom' type='pattern' url='marker2.patt'>
+		<a-marker type='pattern' url='marker2.patt'>
 			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
 		</a-marker>
 
