50% ratio fixed tracking. Multi-pattern test

--- a/ar.html
+++ b/ar.html
@@ -14,25 +14,25 @@
 			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane>
 		</a-marker>
 
-		<!-- <a-marker preset='custom' type='pattern' url='marker1.patt'>
+		<a-marker type='pattern' url='marker1.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere>
 		</a-marker>
 
-		<a-marker preset='custom' type='pattern' url='marker3.patt'>
+		<a-marker type='pattern' url='marker3.patt'>
 			<a-box position='0 0.5 0' material='opacity: 0.5; color:red'></a-box>
 		</a-marker>
 
-		<a-marker preset='custom' type='pattern' url='marker4.patt'>
+		<a-marker type='pattern' url='marker4.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere>
 		</a-marker>
 
-		<a-marker preset='custom' type='pattern' url='marker5.patt'>
+		<a-marker type='pattern' url='marker5.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere>
 		</a-marker>
 
-		<a-marker preset='custom' type='pattern' url='marker6.patt'>
+		<a-marker type='pattern' url='marker6.patt'>
 			<a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere>
-		</a-marker> -->
+		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
 </body>
