--- a/ar.html
+++ b/ar.html
@@ -20,7 +20,8 @@
 		</a-assets>
 
 		<a-marker type='pattern' url='marker1.patt'>
-			<a-image src="#color1" width="900" height="716"></a-image>
+			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
+			<a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image>
 			<!-- <a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane> -->
 		</a-marker>
 
