--- a/ar.html
+++ b/ar.html
@@ -21,8 +21,8 @@
 
 		<a-marker type='pattern' url='marker1.patt'>
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
-			<a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image>
-			<!-- <a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow'></a-plane> -->
+			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
+			<a-plane position='0 0 0' rotation='90 0 0' material='opacity: 0.5; side:double; color:yellow; shader: flat; src: #plane1'></a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
