--- a/ar.html
+++ b/ar.html
@@ -22,7 +22,7 @@
 		<a-marker type='pattern' url='marker1.patt'>
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
 			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
-			<a-plane position='0 0 0' rotation='90 0 0' width='0.1' height='0.1' material='opacity: 0.5; side:double; color:yellow; shader: flat; src: #plane1'></a-plane>
+			<a-plane position='0 0 0' rotation='90 0 0' width='1' height='1' material='opacity: 0.5; side:double; src: #color1'></a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
