a-marker-camera test

--- a/ar.html
+++ b/ar.html
@@ -19,31 +19,31 @@
 			<img id="color6" src="colorized-photos/distributing-surplus-commodities.jpg">
 		</a-assets>
 
-		<a-marker type='pattern' url='marker1.patt'>
+		<a-marker-camera type='pattern' url='marker1.patt'>
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
 			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
 			<a-plane position='0 0 0' rotation='-90 0 0' width='4' height='3' material='side:double; src: #color1'></a-plane>
-		</a-marker>
+		</a-marker-camera>
 
-		<a-marker type='pattern' url='marker2.patt'>
+		<a-marker-camera type='pattern' url='marker2.patt'>
 			<a-plane position='0 0 0' rotation='-90 0 0' width='3.774' height='3' material='side:double; src: #color2'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere> -->
-		</a-marker>
+		</a-marker-camera>
 
-		<a-marker type='pattern' url='marker3.patt'>
+		<a-marker-camera type='pattern' url='marker3.patt'>
 			<!-- <a-image src="#color3" width="775" height="1114"></a-image> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5; color:red'></a-box> -->
-		</a-marker>
+		</a-marker-camera>
 
-		<a-marker type='pattern' url='marker4.patt'>
+		<a-marker-camera type='pattern' url='marker4.patt'>
 			<a-plane position='0 0 0' rotation='-90 0 0' width='3.843' height='3' material='side:double; src: #color4'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere> -->
-		</a-marker>
+		</a-marker-camera>
 
-		<a-marker type='pattern' url='marker5.patt'>
+		<a-marker-camera type='pattern' url='marker5.patt'>
 			<a-plane position='0 0 0' rotation='-90 0 0' width='3.81' height='3' material='side:double; src: #color5'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere> -->
-		</a-marker>
+		</a-marker-camera>
 
 		<!-- <a-marker type='pattern' url='marker6.patt'>
 			<a-image src="#color6" width="800" height="662"></a-image>
