--- a/ar.html
+++ b/ar.html
@@ -22,12 +22,12 @@
 		<a-marker type='pattern' url='marker1.patt'>
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
 			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
-			<!-- position="left<->right, far<->near, ""-->
-			<a-plane position='0 0 -3' rotation='-90 0 0' width='4' height='3' material='side:double; src: #color1'></a-plane>
+			<!-- position="left<->right, far<->near, "up<->down"-->
+			<a-plane position='0 0 3' rotation='-90 0 0' width='6.666' height='5' material='side:double; src: #color1'></a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
-			<a-plane position='0 0 0' rotation='-90 0 0' width='3.774' height='3' material='side:double; src: #color2'></a-plane>
+			<a-plane position='0 0 0' rotation='-90 0 0' width='6.29' height='5' material='side:double; src: #color2'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere> -->
 		</a-marker>
 
@@ -37,12 +37,12 @@
 		</a-marker>
 
 		<a-marker type='pattern' url='marker4.patt'>
-			<a-plane position='0 0 0' rotation='-90 0 0' width='3.843' height='3' material='side:double; src: #color4'></a-plane>
+			<a-plane position='0 0 0' rotation='-90 0 0' width='6.405' height='5' material='side:double; src: #color4'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere> -->
 		</a-marker>
 
 		<a-marker type='pattern' url='marker5.patt'>
-			<a-plane position='0 0 0' rotation='-90 0 0' width='3.81' height='3' material='side:double; src: #color5'></a-plane>
+			<a-plane position='0 0 0' rotation='-90 0 0' width='6.35' height='5' material='side:double; src: #color5'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere> -->
 		</a-marker>
 
