Add component to images

--- a/ar.html
+++ b/ar.html
@@ -30,18 +30,17 @@
 			<img id="color3" src="colorized-photos/irish-ellis-island.jpg">
 			<img id="color4" src="colorized-photos/hooverville-central-park.jpg">
 			<img id="color5" src="colorized-photos/family-on-road.jpg">
-			<img id="color6" src="colorized-photos/distributing-surplus-commodities.jpg">
 		</a-assets>
 
 		<a-marker type='pattern' url='marker1.patt'>
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
 			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
 			<!-- position="left<->right, far<->near, "up<->down"-->
-			<a-plane position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'></a-plane>
+			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'></a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
-			<a-plane position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'></a-plane>
+			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere> -->
 		</a-marker>
 
@@ -51,19 +50,15 @@
 		</a-marker>
 
 		<a-marker type='pattern' url='marker4.patt'>
-			<a-plane position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'></a-plane>
+			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere> -->
 		</a-marker>
 
 		<a-marker type='pattern' url='marker5.patt'>
-			<a-plane position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5'></a-plane>
+			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5'></a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere> -->
 		</a-marker>
 
-		<!-- <a-marker type='pattern' url='marker6.patt'>
-			<a-image src="#color6" width="800" height="662"></a-image>
-			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:green'></a-sphere> -->
-		<!--</a-marker> -->
 		<a-entity camera></a-entity>
 	</a-scene>
 </body>
