--- a/ar.html
+++ b/ar.html
@@ -12,6 +12,7 @@
 
 			init: function() {
 				var el = this.el;
+				console.log(el);
 			}
 			el.addEventListener('click', function() {
 				console.log(el.material);
