--- a/ar.html
+++ b/ar.html
@@ -8,13 +8,12 @@
 	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 	<script>
 		AFRAME.registerComponent('link-to-img', {
-			const link = "https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/";
-
 			init: function() {
 				var el = this.el;
 				console.log(el);
 			}
 			el.addEventListener('click', function() {
+				var url = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 				console.log(el.material);
 				//window.location = link + el.material. + '.jpg';
 			})
