--- a/ar.html
+++ b/ar.html
@@ -10,14 +10,16 @@
 		AFRAME.registerComponent('link-to-img', {
 			init: function() {
 				var el = this.el;
-				console.log(el.material);
+				console.log(el.getAttribute('material').src);
 				el.addEventListener('click', function() {
 					var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 					alert("Clicked");
-					// Get the material src ID,
-					// find that ID and get the ACTUAL source,
-					// imgSrc = split and store all text after '/'
-					//window.location = link + imgSrc;
+					let imgId = el.getAttribute('material').src; // Get the ID of the JPG image asset.
+					let targetImg = imgId.substring(imgId.indexOf('#') + 1); // Clip off the "#".
+					let imgSrc = document.querySelector(targetImg).getAttribute('src'); // Get the src string from the image.
+					imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+					console.log(imgSrc);
+					window.location = link + imgSrc;
 				})
 			}
 		});
