--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
 			init: function() {
 				var el = this.el;
 				console.log(el.getAttribute('material').src);
-				el.addEventListener('click', function() {
+				el.addEventListener('click', function(evt) {
 					var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 					alert("Clicked");
 					let imgId = el.getAttribute('material').src; // Get the ID of the JPG image asset.
@@ -40,11 +40,13 @@
 			<!-- <a-image src="#color1" width="900" height="716"></a-image> -->
 			<!-- <a-image rotation="90 0 0" src="#color1" width="300" height="239"></a-image> -->
 			<!-- position="left<->right, far<->near, "up<->down"-->
-			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'></a-plane>
+			<a-plane link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'>
+			</a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
-			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'></a-plane>
+			<a-plane link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'>
+			</a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:blue'></a-sphere> -->
 		</a-marker>
 
@@ -54,13 +56,14 @@
 		</a-marker>
 
 		<a-marker type='pattern' url='marker4.patt'>
-			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'></a-plane>
+			<a-plane link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'>
+			</a-plane>
 			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:yellow'></a-sphere> -->
 		</a-marker>
 
 		<a-marker type='pattern' url='marker5.patt'>
-			<a-plane link-to-img position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5'></a-plane>
-			<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere> -->
+			<a-plane link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5' </a-plane>
+				<!-- <a-sphere position='0 0.5 0' material='opacity: 0.5; color:pink'></a-sphere> -->
 		</a-marker>
 
 		<a-entity camera></a-entity>
