--- a/ar.html
+++ b/ar.html
@@ -14,9 +14,10 @@
 				el.addEventListener('click', function(evt) {
 					var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 					alert("Clicked");
-					let imgId = el.getAttribute('material').src; // Get the ID of the JPG image asset.
-					let targetImg = imgId.substring(imgId.indexOf('#') + 1); // Clip off the "#".
-					let imgSrc = document.querySelector(targetImg).getAttribute('src'); // Get the src string from the image.
+					var imgId = el.getAttribute('material').src; // Get the ID of the JPG image asset.
+					console.log(imgId);
+					var targetImg = imgId.substring(imgId.indexOf('#') + 1); // Clip off the "#".
+					var imgSrc = document.querySelector(targetImg).getAttribute('src'); // Get the src string from the image.
 					imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
 					console.log(imgSrc);
 					window.location = link + imgSrc;
