--- a/ar.html
+++ b/ar.html
@@ -14,13 +14,9 @@
 					if (el.object3D.visible == true && evt.detail.cursorEl) {
 						alert("Clicked"); // Debugging
 						var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
-						var imgId = el.getAttribute('material').src.getAttribute('src'); // Get the ID of the JPG image asset.
-						console.log(imgId);
-						//var targetImg = imgId.substring(imgId.indexOf('#') + 1); // Clip off the "#".
-						//var imgSrc = document.querySelector(targetImg).getAttribute('src'); // Get the src string from the image.
-						var imgSrc = imgId.substring(imgId.indexOf('/') + 1);
-						console.log(imgSrc);
-						window.location = link + imgSrc;
+						var imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						window.location = urlFront + imgSrc;
 					}
 				})
 			}
