--- a/ar.html
+++ b/ar.html
@@ -12,11 +12,13 @@
 				var el = this.el;
 				el.addEventListener('click', function(evt) {
 					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						console.log(evt.detail);
 						alert("Clicked"); // Debugging
 						var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 						var imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
 						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
-						window.location = urlFront + imgSrc;
+						console.log(imgSrc);
+						//window.location = urlFront + imgSrc;
 					}
 				})
 			}
