--- a/ar.html
+++ b/ar.html
@@ -9,17 +9,17 @@
 	<script>
 		AFRAME.registerComponent('link-to-img', {
 			init: function() {
-				var el = this.el;
+				let el = this.el; // NOTE, this code is buggy! It fires for every element with this component.
+				// Not sure how to resolve it generically, but there needs to be some check between the evt and this.el
 				el.addEventListener('click', function(evt) {
-					const intersectedElement = evt && evt.detail && evt.detail.intersectedEl;
-					console.log(intersectedElement);
-					if (intersectedElement === el) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						//console.log(evt.detail);
 						alert("Clicked"); // Debugging
 						var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 						var imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
 						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
 						console.log(imgSrc);
-						//window.location = urlFront + imgSrc;
+						window.location = urlFront + imgSrc;
 					}
 				})
 			}
