Fix mobile fuse click

--- a/ar.html
+++ b/ar.html
@@ -39,26 +39,26 @@
 
 		<a-marker type='pattern' url='marker1.patt'>
 			<!-- position="left<->right, far<->near, up<->down" -->
-			<a-plane id='i' link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'>
+			<a-plane id='i' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'>
 			</a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker2.patt'>
-			<a-plane id='ii' link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'>
+			<a-plane id='ii' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'>
 			</a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker3.patt'>
-			<a-plane id='iii' link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color3'>
+			<a-plane id='iii' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color3'>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker4.patt'>
-			<a-plane id='iv' link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'>
+			<a-plane id='iv' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'>
 			</a-plane>
 		</a-marker>
 
 		<a-marker type='pattern' url='marker5.patt'>
-			<a-plane id='v' link-to-img emitevents='true' cursor='rayOrigin: mouse' position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5' </a-plane>
+			<a-plane id='v' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5' </a-plane>
 		</a-marker>
 
 		<a-entity camera></a-entity>
