--- a/ar.html
+++ b/ar.html
@@ -7,6 +7,8 @@
 	<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 	<script>
+		var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
+
 		AFRAME.registerComponent('link-to-img', {
 			init: function() {
 				let el = this.el; // NOTE, this code is buggy! It fires for every element with this component.
@@ -15,8 +17,63 @@
 					if (el.object3D.visible == true && evt.detail.cursorEl) {
 						//console.log(evt.detail);
 						//alert("Clicked"); // Debugging
-						var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
-						var imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						console.log(imgSrc);
+						window.location = urlFront + imgSrc;
+					}
+				})
+			}
+		});
+
+		AFRAME.registerComponent('link-to-img2', {
+			init: function() {
+				let el = this.el;
+				el.addEventListener('click', function(evt) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						console.log(imgSrc);
+						window.location = urlFront + imgSrc;
+					}
+				})
+			}
+		});
+
+		AFRAME.registerComponent('link-to-img3', {
+			init: function() {
+				let el = this.el;
+				el.addEventListener('click', function(evt) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						console.log(imgSrc);
+						window.location = urlFront + imgSrc;
+					}
+				})
+			}
+		});
+
+		AFRAME.registerComponent('link-to-img4', {
+			init: function() {
+				let el = this.el;
+				el.addEventListener('click', function(evt) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						console.log(imgSrc);
+						window.location = urlFront + imgSrc;
+					}
+				})
+			}
+		});
+
+		AFRAME.registerComponent('link-to-img5', {
+			init: function() {
+				let el = this.el;
+				el.addEventListener('click', function(evt) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
 						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
 						console.log(imgSrc);
 						window.location = urlFront + imgSrc;
