--- a/ar.html
+++ b/ar.html
@@ -13,16 +13,30 @@
 			init: function() {
 				let el = this.el; // NOTE, this code is buggy! It fires for every element with this component.
 				// Not sure how to resolve it generically, but there needs to be some check between the evt and this.el
-				el.addEventListener('click', function(evt) {
-					if (el.object3D.visible == true && evt.detail.cursorEl) {
-						//console.log(evt.detail);
-						//alert("Clicked"); // Debugging
-						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
-						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
-						console.log(imgSrc);
-						window.location = urlFront + imgSrc;
-					}
-				})
+			},
+			tick: function() {
+				var listening = false;
+				let el = this.el;
+				if (el.object3D.visible && !listening) {
+					listening = true;
+					el.addEventListener('click', function(evt) {
+						if (el.object3D.visible == true && evt.detail.cursorEl) {
+							//console.log(evt.detail);
+							//alert("Clicked"); // Debugging
+							let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+							imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+							console.log(imgSrc);
+							window.location = urlFront + imgSrc;
+						}
+						if (el.object3D.visible == false) {
+
+						}
+					});
+				}
+				if (!el.object3D.visible) {
+					listening = false;
+					el.removeEventListener('click');
+				}
 			}
 		});
 
