--- a/ar.html
+++ b/ar.html
@@ -18,6 +18,7 @@
 				var listening = false;
 				let el = this.el;
 				if (el.object3D.visible && !listening) {
+					console.log("Seen");
 					listening = true;
 					el.addEventListener('click', function(evt) {
 						if (el.object3D.visible == true && evt.detail.cursorEl) {
@@ -34,6 +35,7 @@
 					});
 				}
 				if (!el.object3D.visible) {
+					console.log("gone");
 					listening = false;
 					el.removeEventListener('click');
 				}
