--- a/ar.html
+++ b/ar.html
@@ -15,7 +15,7 @@
 				var listening = false;
 				marker.addEventListener('markerFound', function() {
 					var markerId = marker.id;
-					console.log('markerFound: ', markerId);
+					console.log(marker);
 					listening = true;
 				});
 				marker.addEventListener('markerLost', function() {
@@ -71,7 +71,7 @@
 						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
 						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
 						console.log(imgSrc);
-						window.location = urlFront + imgSrc;
+						//window.location = urlFront + imgSrc;
 					}
 				})
 			}
@@ -80,7 +80,7 @@
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene arjs='debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+	<a-scene embedded arjs='debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 		<a-assets>
 			<img id="color1" src="colorized-photos/dust-bowl.jpg">
 			<img id="color2" src="colorized-photos/migrant-family.jpg">
