--- a/ar.html
+++ b/ar.html
@@ -12,17 +12,43 @@
 		AFRAME.registerComponent('registerevents', {
 			init: function() {
 				var marker = this.el;
-				var listening = false;
+				var plane = marker.firstElementChild;
 				marker.addEventListener('markerFound', function() {
-					var markerId = marker.id;
-					console.log(marker);
-					listening = true;
+					if (plane.parentElement.id == marker.id) { // Add only to the correct parent/child
+						plane.addEventListener('click', function() {
+							console.log("Click listener added");
+							let imgSrc = plane.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+							imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+							console.log(imgSrc);
+							//window.location = urlFront + imgSrc;
+						})
+					}
 				});
 				marker.addEventListener('markerLost', function() {
-					var markerId = marker.id;
 					console.log('markerLost: ', markerId);
-					listening = false;
+					if (plane.parentElement.id == marker.id) {
+						plane.removeEventListener('click');
+						console.log("Click listener removed");
+					}
 				});
+			}
+		});
+
+		AFRAME.registerComponent('link-to-img', {
+			init: function() {
+				let el = this.el;
+				console.log(el.parentElement);
+				console.log(el.parentElement.getAttribute('registerevents'));
+				console.log(el.parentElement.getAttribute('registerevents').listening);
+
+				el.addEventListener('click', function(evt) {
+					if (el.object3D.visible == true && evt.detail.cursorEl) {
+						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+						console.log(imgSrc);
+						//window.location = urlFront + imgSrc;
+					}
+				})
 			}
 		});
 
@@ -58,24 +84,6 @@
 				}
 			}
 		});
-
-		AFRAME.registerComponent('link-to-img', {
-			init: function() {
-				let el = this.el;
-				console.log(el.parentElement);
-				console.log(el.parentElement.getAttribute('registerevents'));
-				console.log(el.parentElement.getAttribute('registerevents').listening);
-
-				el.addEventListener('click', function(evt) {
-					if (el.object3D.visible == true && evt.detail.cursorEl) {
-						let imgSrc = el.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
-						imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
-						console.log(imgSrc);
-						//window.location = urlFront + imgSrc;
-					}
-				})
-			}
-		});
 	</script>
 </head>
 
@@ -89,28 +97,28 @@
 			<img id="color5" src="colorized-photos/family-on-road.jpg">
 		</a-assets>
 
-		<a-marker registerevents type='pattern' url='marker1.patt'>
+		<a-marker id='i' registerevents type='pattern' url='marker1.patt'>
 			<!-- position="left<->right, far<->near, up<->down" -->
-			<a-plane id='i' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'>
+			<a-plane emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.332' height='4' material='side:double; src: #color1'>
 			</a-plane>
 		</a-marker>
 
-		<a-marker registerevents type='pattern' url='marker2.patt'>
-			<a-plane id='ii' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'>
+		<a-marker id='ii' registerevents type='pattern' url='marker2.patt'>
+			<a-plane emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.032' height='4' material='side:double; src: #color2'>
 			</a-plane>
 		</a-marker>
 
-		<a-marker registerevents type='pattern' url='marker3.patt'>
-			<a-plane id='iii' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color3'>
+		<a-marker id='iii' registerevents type='pattern' url='marker3.patt'>
+			<a-plane emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color3'>
 		</a-marker>
 
-		<a-marker registerevents type='pattern' url='marker4.patt'>
-			<a-plane id='iv' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'>
+		<a-marker id='iv' registerevents type='pattern' url='marker4.patt'>
+			<a-plane emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.124' height='4' material='side:double; src: #color4'>
 			</a-plane>
 		</a-marker>
 
-		<a-marker registerevents type='pattern' url='marker5.patt'>
-			<a-plane id='v' link-to-img emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5' </a-plane>
+		<a-marker id='v' registerevents type='pattern' url='marker5.patt'>
+			<a-plane emitevents='true' cursor='rayOrigin: mouse; fuse: false' position='2 0 2.8' rotation='-90 0 0' width='5.08' height='4' material='side:double; src: #color5' </a-plane>
 		</a-marker>
 
 		<a-entity camera></a-entity>
