--- a/ar.html
+++ b/ar.html
@@ -15,24 +15,26 @@
 				var plane = marker.firstElementChild;
 				marker.addEventListener('markerFound', function() {
 					if (plane.parentElement.id == marker.id) { // Add only to the correct parent/child
-						plane.addEventListener('click', function() {
-							console.log("Click listener added");
-							let imgSrc = plane.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
-							imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
-							console.log(imgSrc);
-							//window.location = urlFront + imgSrc;
-						})
+						console.log("Adding click listener.");
+						plane.addEventListener('click', clickListen(marker, plane));
 					}
 				});
 				marker.addEventListener('markerLost', function() {
 					console.log('markerLost');
 					if (plane.parentElement.id == marker.id) {
-						plane.removeEventListener('click');
+						plane.removeEventListener('click', clickListen);
 						console.log("Click listener removed");
 					}
 				});
 			}
 		});
+
+		function clickListen(marker, plane) {
+			let imgSrc = plane.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+			imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+			console.log(imgSrc);
+			//window.location = urlFront + imgSrc;
+		}
 
 		// AFRAME.registerComponent('link-to-img', {
 		// 	init: function() {
