--- a/ar.html
+++ b/ar.html
@@ -15,8 +15,8 @@
 				var plane = marker.firstElementChild;
 				marker.addEventListener('markerFound', function() {
 					if (plane.parentElement.id == marker.id) { // Add only to the correct parent/child
-						console.log("Adding click listener.");
-						plane.addEventListener('click', function(evt) {
+						plane.addEventListener('click', function() {
+							console.log("Adding click listener.");
 							clickResults(marker, plane);
 						});
 					}
@@ -32,10 +32,12 @@
 		});
 
 		function clickResults(marker, plane) {
-			let imgSrc = plane.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
-			imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
-			console.log(imgSrc);
-			//window.location = urlFront + imgSrc;
+			if (plane.parentElement.id == marker.id) { // Should be redundant, but getting multiple logs from here...
+				let imgSrc = plane.getAttribute('material').src.getAttribute('src'); // .src returns the object of the src ID. Get the src string of that img object.
+				imgSrc = imgSrc.substring(imgSrc.indexOf('/') + 1);
+				console.log(imgSrc);
+				//window.location = urlFront + imgSrc;
+			}
 		}
 
 		// AFRAME.registerComponent('link-to-img', {
