Smooth marker AR.js

--- a/ar.html
+++ b/ar.html
@@ -5,7 +5,7 @@
 
 <head>
 	<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+	<script src="aframe-ar.js"></script>
 	<script>
 		var urlFront = 'https://raw.githubusercontent.com/kotavy/colorized-ar/master/colorized-photos/';
 
